--- a/SpaceWay/SpaceWay.csproj
+++ b/SpaceWay/SpaceWay.csproj
@@ -140,6 +140,10 @@
     <Compile Include="Migrations\201905271126243_first.Designer.cs">
       <DependentUpon>201905271126243_first.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905301156561_second.cs" />
+    <Compile Include="Migrations\201905301156561_second.Designer.cs">
+      <DependentUpon>201905301156561_second.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Aircraft.cs" />
     <Compile Include="Models\Flight.cs" />
@@ -209,6 +213,7 @@
     <Content Include="Views\Flights\Details.cshtml" />
     <Content Include="Views\Flights\Edit.cshtml" />
     <Content Include="Views\Flights\Index.cshtml" />
+    <Content Include="Views\Passengers\Login.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -229,6 +234,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201905271126243_first.resx">
       <DependentUpon>201905271126243_first.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905301156561_second.resx">
+      <DependentUpon>201905301156561_second.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
