--- a/SpaceWay/SpaceWay.csproj
+++ b/SpaceWay/SpaceWay.csproj
@@ -136,13 +136,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201906231416131_m1.cs" />
-    <Compile Include="Migrations\201906231416131_m1.Designer.cs">
-      <DependentUpon>201906231416131_m1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201906231419461_m11.cs" />
-    <Compile Include="Migrations\201906231419461_m11.Designer.cs">
-      <DependentUpon>201906231419461_m11.cs</DependentUpon>
+    <Compile Include="Migrations\201906221042228_init.cs" />
+    <Compile Include="Migrations\201906221042228_init.Designer.cs">
+      <DependentUpon>201906221042228_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Aircraft.cs" />
@@ -153,7 +149,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\9.gif" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -171,10 +166,6 @@
     <Content Include="Content\img\source.txt" />
     <Content Include="Content\js\grayscale.js" />
     <Content Include="Content\js\grayscale.min.js" />
-    <Content Include="Content\vendor\bootstrap-grid.css" />
-    <Content Include="Content\vendor\bootstrap-grid.min.css" />
-    <Content Include="Content\vendor\bootstrap-reboot.css" />
-    <Content Include="Content\vendor\bootstrap-reboot.min.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.min.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-reboot.css" />
@@ -209,6 +200,7 @@
     <Content Include="Content\vendor\jquery\jquery.min.js" />
     <Content Include="Content\vendor\jquery\jquery.slim.js" />
     <Content Include="Content\vendor\jquery\jquery.slim.min.js" />
+    <Content Include="Content\videos\video.mp4" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -239,10 +231,6 @@
     <Content Include="Content\vendor\fontawesome-free\webfonts\fa-solid-900.woff2" />
     <Content Include="Content\vendor\jquery\jquery.min.map" />
     <Content Include="Content\vendor\jquery\jquery.slim.min.map" />
-    <Content Include="Content\vendor\bootstrap-grid.css.map" />
-    <Content Include="Content\vendor\bootstrap-grid.min.css.map" />
-    <Content Include="Content\vendor\bootstrap-reboot.css.map" />
-    <Content Include="Content\vendor\bootstrap-reboot.min.css.map" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
@@ -254,6 +242,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
+    <Content Include="Content\js\canvas.js" />
+    <Content Include="Content\img\spaceship.png" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -306,7 +296,6 @@
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
     <Content Include="Views\Reservations\NewReservation.cshtml" />
     <Content Include="Views\Reservations\Payment.cshtml" />
-    <Content Include="Views\Home\MoonStar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -326,11 +315,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201906231416131_m1.resx">
-      <DependentUpon>201906231416131_m1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201906231419461_m11.resx">
-      <DependentUpon>201906231419461_m11.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201906221042228_init.resx">
+      <DependentUpon>201906221042228_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
