--- a/SpaceWay/SpaceWay.csproj
+++ b/SpaceWay/SpaceWay.csproj
@@ -136,9 +136,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201906221042228_init.cs" />
-    <Compile Include="Migrations\201906221042228_init.Designer.cs">
-      <DependentUpon>201906221042228_init.cs</DependentUpon>
+    <Compile Include="Migrations\201906231936520_initial.cs" />
+    <Compile Include="Migrations\201906231936520_initial.Designer.cs">
+      <DependentUpon>201906231936520_initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201906231942597_initial1.cs" />
+    <Compile Include="Migrations\201906231942597_initial1.Designer.cs">
+      <DependentUpon>201906231942597_initial1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Aircraft.cs" />
@@ -315,8 +319,11 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201906221042228_init.resx">
-      <DependentUpon>201906221042228_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201906231936520_initial.resx">
+      <DependentUpon>201906231936520_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906231942597_initial1.resx">
+      <DependentUpon>201906231942597_initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
