--- a/SpaceWay/SpaceWay.csproj
+++ b/SpaceWay/SpaceWay.csproj
@@ -168,6 +168,7 @@
     <Content Include="Content\img\bg-masthead.jpg" />
     <Content Include="Content\img\ipad.png" />
     <Content Include="Content\img\source.txt" />
+    <Content Include="Content\js\nasa.js" />
     <Content Include="Content\js\grayscale.js" />
     <Content Include="Content\js\grayscale.min.js" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.css" />
@@ -204,7 +205,7 @@
     <Content Include="Content\vendor\jquery\jquery.min.js" />
     <Content Include="Content\vendor\jquery\jquery.slim.js" />
     <Content Include="Content\vendor\jquery\jquery.slim.min.js" />
-    <Content Include="Content\videos\video.mp4" />
+    <Content Include="Content\Images\video.mp4" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -247,7 +248,7 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Content\js\canvas.js" />
-    <Content Include="Content\img\spaceship.png" />
+    <Content Include="Content\Images\spaceship.png" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -300,10 +301,12 @@
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
     <Content Include="Views\Reservations\NewReservation.cshtml" />
     <Content Include="Views\Reservations\Payment.cshtml" />
+    <Content Include="Views\Home\Nasa.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\vendor\bootstrap\css\Original\" />
+    <Folder Include="Content\videos\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
