--- a/SpaceWay/SpaceWay.csproj
+++ b/SpaceWay/SpaceWay.csproj
@@ -18,7 +18,8 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>
+    </IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -136,13 +137,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201906231936520_initial.cs" />
-    <Compile Include="Migrations\201906231936520_initial.Designer.cs">
-      <DependentUpon>201906231936520_initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201906231942597_initial1.cs" />
-    <Compile Include="Migrations\201906231942597_initial1.Designer.cs">
-      <DependentUpon>201906231942597_initial1.cs</DependentUpon>
+    <Compile Include="Migrations\201908071129048_init.cs" />
+    <Compile Include="Migrations\201908071129048_init.Designer.cs">
+      <DependentUpon>201908071129048_init.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Aircraft.cs" />
@@ -323,11 +320,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201906231936520_initial.resx">
-      <DependentUpon>201906231936520_initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201906231942597_initial1.resx">
-      <DependentUpon>201906231942597_initial1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201908071129048_init.resx">
+      <DependentUpon>201908071129048_init.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
