--- a/SpaceWay/SpaceWay.csproj
+++ b/SpaceWay/SpaceWay.csproj
@@ -137,9 +137,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201908071129048_init.cs" />
-    <Compile Include="Migrations\201908071129048_init.Designer.cs">
-      <DependentUpon>201908071129048_init.cs</DependentUpon>
+    <Compile Include="Migrations\201908120725488_m1.cs" />
+    <Compile Include="Migrations\201908120725488_m1.Designer.cs">
+      <DependentUpon>201908120725488_m1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Aircraft.cs" />
@@ -338,8 +338,8 @@
     <Content Include="Scripts\jquery-3.3.1.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201908071129048_init.resx">
-      <DependentUpon>201908071129048_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201908120725488_m1.resx">
+      <DependentUpon>201908120725488_m1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
